--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>saber.compareprice</groupId>
-    <artifactId>compareprice</artifactId>
+    <groupId>saber.uestc</groupId>
+    <artifactId>JDSpider</artifactId>
     <version>0.0.1</version>
 
     <dependencies>
@@ -24,7 +24,13 @@
             <artifactId>mongodb-driver</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
@@ -41,7 +47,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ComparePricePageProcessor</mainClass>
+                                    <mainClass>JDSpider</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
